--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.1.0
   provider: ^6.0.5
   shared_preferences: ^2.2.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
